[gd_scene load_steps=11 format=3 uid="uid://cvrdnq2kte0on"]

[ext_resource type="FontVariation" uid="uid://cru2bb2rsku6p" path="res://Fonts/cc.yal.6w3.tres" id="1_3kmuk"]
[ext_resource type="Script" path="res://scripts/stress_params.gd" id="1_6uiq1"]
[ext_resource type="PackedScene" uid="uid://crfbho4mk0gvo" path="res://entities/stress_box.tscn" id="2_lsef0"]

[sub_resource type="ImageTexture" id="ImageTexture_hoi8r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7p4ut"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tuupg"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="Theme" id="Theme_qk2ly"]
OptionButton/colors/font_color = Color(0.875, 0.875, 0.875, 1)
OptionButton/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
OptionButton/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
OptionButton/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
OptionButton/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
OptionButton/colors/font_outline_color = Color(1, 1, 1, 1)
OptionButton/colors/font_pressed_color = Color(1, 1, 1, 1)
OptionButton/constants/arrow_margin = 8
OptionButton/constants/h_separation = 0
OptionButton/constants/modulate_arrow = 0
OptionButton/constants/outline_size = 0
OptionButton/font_sizes/font_size = 16
OptionButton/fonts/font = ExtResource("1_3kmuk")
OptionButton/icons/arrow = SubResource("ImageTexture_hoi8r")
OptionButton/styles/disabled = SubResource("StyleBoxFlat_7p4ut")
OptionButton/styles/disabled_mirrored = SubResource("StyleBoxFlat_7p4ut")
OptionButton/styles/focus = SubResource("StyleBoxFlat_7p4ut")
OptionButton/styles/hover = SubResource("StyleBoxFlat_7p4ut")
OptionButton/styles/hover_mirrored = SubResource("StyleBoxFlat_7p4ut")
OptionButton/styles/normal = SubResource("StyleBoxFlat_7p4ut")
OptionButton/styles/normal_mirrored = SubResource("StyleBoxFlat_tuupg")
OptionButton/styles/pressed = SubResource("StyleBoxFlat_7p4ut")
OptionButton/styles/pressed_mirrored = SubResource("StyleBoxFlat_7p4ut")

[sub_resource type="Image" id="Image_aja8g"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 186, 255, 255, 255, 57, 255, 255, 255, 142, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 189, 255, 255, 255, 58, 255, 255, 255, 0, 255, 255, 255, 6, 255, 255, 255, 133, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 96, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 190, 255, 255, 255, 68, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 4, 255, 255, 255, 124, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 97, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 78, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 2, 255, 255, 255, 113, 255, 255, 255, 191, 255, 255, 255, 191, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 97, 255, 255, 255, 90, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 1, 255, 255, 255, 102, 255, 255, 255, 96, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_yuxfk"]
image = SubResource("Image_aja8g")

[sub_resource type="Theme" id="Theme_vh8jm"]
LineEdit/colors/caret_color = Color(0.95, 0.95, 0.95, 1)
LineEdit/colors/clear_button_color = Color(0.875, 0.875, 0.875, 1)
LineEdit/colors/clear_button_color_pressed = Color(1, 1, 1, 1)
LineEdit/colors/font_color = Color(0.875, 0.875, 0.875, 1)
LineEdit/colors/font_outline_color = Color(1, 1, 1, 1)
LineEdit/colors/font_placeholder_color = Color(0.875, 0.875, 0.875, 0.6)
LineEdit/colors/font_selected_color = Color(1, 1, 1, 1)
LineEdit/colors/font_uneditable_color = Color(0.875, 0.875, 0.875, 0.5)
LineEdit/colors/selection_color = Color(0.5, 0.5, 0.5, 1)
LineEdit/constants/caret_width = 1
LineEdit/constants/minimum_character_width = 2
LineEdit/constants/outline_size = 0
LineEdit/font_sizes/font_size = 16
LineEdit/fonts/font = ExtResource("1_3kmuk")
LineEdit/icons/clear = SubResource("ImageTexture_yuxfk")
LineEdit/styles/focus = SubResource("StyleBoxFlat_7p4ut")
LineEdit/styles/normal = SubResource("StyleBoxFlat_7p4ut")
LineEdit/styles/read_only = SubResource("StyleBoxFlat_7p4ut")

[node name="stress_params" type="HBoxContainer" node_paths=PackedStringArray("options", "edit", "box")]
script = ExtResource("1_6uiq1")
options = NodePath("options")
edit = NodePath("edit")
box = NodePath("box")

[node name="if" type="Label" parent="."]
layout_mode = 2
text = "Если"

[node name="options" type="OptionButton" parent="."]
layout_mode = 2
theme = SubResource("Theme_qk2ly")
alignment = 1

[node name="condition" type="Label" parent="."]
layout_mode = 2
text = ">="

[node name="edit" type="LineEdit" parent="."]
layout_mode = 2
theme = SubResource("Theme_vh8jm")
text = "2"
alignment = 1
max_length = 2
virtual_keyboard_type = 2
select_all_on_focus = true

[node name="then" type="Label" parent="."]
layout_mode = 2
text = ", то +"

[node name="box" parent="." instance=ExtResource("2_lsef0")]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4

[connection signal="item_selected" from="options" to="." method="_on_options_item_selected"]
[connection signal="text_changed" from="edit" to="." method="_on_edit_text_changed"]
